Rewrote the network code to use Appache's HTTPClient